Fix banner height on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,6 @@ html {
   font-family: "Open Sans", sans-serif;
 }
 
-#about {
-  /*padding: 1.5em;*/
-}
-
 .max-width {
   max-width: 1200px;
   margin: 0 auto;
@@ -56,10 +52,9 @@ header nav li a:hover {
 }
 
 /* BANNER */
-
 .banner-container {
   width: 100%;
-  padding: 300px 0;
+  padding: 160px 0;
   margin-bottom: .5em;
   background-image: url("../images/cat-lady.jpg");
   background-position: center center;
@@ -81,27 +76,17 @@ header nav li a:hover {
 }
 
 .banner-wrapper h1 {
-  margin-top: 2em;
+  margin-top: 1em;
   color: #fff;
   font-family: 'Sintony', sans-serif;
   text-shadow: 0 0 8px #000;
 }
 
 .banner-wrapper p {
-  margin-top: 6em;
+  margin-top: 4em;
   color: #fff;
   text-shadow: 0 0 8px #000;
 }
-
-/*.clip-left {
-  -webkit-clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
-  clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
-}
-
-.clip-right {
-  -webkit-clip-path: polygon(25% 0%, 100% 1%, 100% 100%, 25% 100%, 0% 50%);
-  clip-path: polygon(25% 0%, 100% 1%, 100% 100%, 25% 100%, 0% 50%);
-}*/
 
 .main-ol {
   color: #E1533C;
@@ -139,6 +124,23 @@ footer a {
   #about > .grid,
   #content > .grid {
     margin-bottom: 6em;
+  }
+
+  .banner-container {
+    padding: 300px 0;
+  }
+
+  .banner-container h1 {
+    margin: 0;
+  }
+
+  .banner-container p {
+    margin-top: 2.5em;
+  }
+
+  .banner-container p,
+  .banner-container h1 {
+    padding-left: 6%;
   }
 
 }
